Some scrollbars for popups and various bug fixes.
git-svn-id: file:///home/users/tmap/svn/repos/baker/trunk@3431 fdbf22ae-c210-0410-be80-ca943da6b8f8

--- a/WebContent/JavaScript/ui/LASUI.css
+++ b/WebContent/JavaScript/ui/LASUI.css
@@ -140,8 +140,11 @@ font-weight: bold;
 }
 .LASPopupDIVNode {
 	position:absolute;
-	left:100px;
-	top:100px;
+	left:50px;
+	top:50px;
+	max-height:600px;
+	max-width:700px;
+	overflow:scroll;
 	background-color : white;
 	border : 2pt solid black;
 	border-color: #5c731e;
@@ -150,7 +153,11 @@ font-weight: bold;
 	z-index : 6;
 	width:600px;
 }
-
+.LASConstraintsPane {
+	width:225px;
+	height:600px;
+	overflow:scroll;
+}
 .LASTitleTextNode {
 	font-family:arial;
 	color : white;
